--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,14 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "backend": "file:",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "description": ""
 }
